--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,4 +40,5 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands",
     "vendor/magnific-popup/magnific-popup"
+	"layout/paragraphs" // 新增此行
 ;
