--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,6 +39,5 @@
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands",
-    "vendor/magnific-popup/magnific-popup",
-	"layout/paragraphs" // 新增此行
+    "vendor/magnific-popup/magnific-popup"
 ;
