--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -42,49 +42,50 @@
 			<p>{{ post.type }}, <i>{{ post.venue }}</i>, 
 			{% comment %} Teaching collection日期处理 {% endcomment %}
 			{% if post.date %}
-				{{ post.date | date: "%B %d, %Y" }}
-			{% elsif post.year_month %}
-				{{  post.year_month | append: "-01" | date: "%B, %Y" }}
-			{% elsif post.year %}
-				{{ post.year }}
+				{% assign date_segments = post.date | split: "-" %}
+				{% if date_segments.size >= 3 %}
+					{{ post.date | date: "%B %d, %Y" }}
+				{% elsif date_segments.size == 2 %}
+					{{ post.date | date: "%B, %Y" }}
+				{% else %}
+					{{ post.date | date: "%Y" }}
+				{% endif %}
 			{% else %}
-				{{ "1900-01-01" | date: "%Y" }}
+				{{ "1995-01-01" | date: "%Y" }}
 			{% endif %}</p>
 
 		{% elsif post.collection == 'publications' %}
 			<p>Published in <i>{{ post.venue }}</i>, 
 			{% comment %} Publications collection日期处理 {% endcomment %}
 			{% if post.date %}
-				{{ post.date | date: "%B %d, %Y" }}
-			{% elsif post.year_month %}
-				{{  post.year_month | append: "-01" | date: "%B, %Y" }}
-			{% elsif post.year %}
-				{{ post.year }}
+				% assign date_segments = post.date | split: "-" %}
+				{% if date_segments.size >= 3 %}
+					{{ post.date | date: "%B %d, %Y" }}
+				{% elsif date_segments.size == 2 %}
+					{{ post.date | date: "%B, %Y" }}
+				{% else %}
+					{{ post.date | date: "%Y" }}
+				{% endif %}
 			{% else %}
-				{{ "1900-01-01" | date: "%Y" }}
+				{{ "1995-01-01" | date: "%Y" }}
 			{% endif %}</p>
 
 		{% else %}
 			{% comment %} 其他内容的日期处理 {% endcomment %}
 			{% if post.date %}
-				<p class="page__date">
-				<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
-				{{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-				<time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time>
-				</p>
-			{% elsif post.year_month %}
-				<p class="page__date">
-				<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
-				{{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-				<time datetime="{{ post.year_month }}-01">{{ post.year_month | append: "-01" | date: "%B, %Y" }}</time>
-				</p>
-			{% elsif post.year %}
-				<p class="page__date">
-				<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
-				{{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-				<time datetime="{{ post.year }}-01-01">{{ post.year }}</time>
-				</p>
-			{% endif %}
+			<p class="page__date">
+			<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
+			{% assign date_segments = post.date | split: "-" %}
+			<time datetime="{{ post.date | date_to_xmlschema }}">
+				{% if date_segments.size >= 3 %}
+					{{ post.date | date: "%B %d, %Y" }}
+				{% elsif date_segments.size == 2 %}
+					{{ post.date | date: "%B, %Y" }}
+				{% else %}
+					{{ post.date | date: "%Y" }}
+				{% endif %}
+			</time>
+			</p>
 		{% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
