--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -74,7 +74,7 @@
 			<!-- 其他内容的日期处理 -->
 			<p class="page__date">
 			<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-			<time datetime="{{ post.date | '%Y-%m-%d' }}">
+			<time datetime="{{ post.date | date: '%Y-%m-%d' }}">
 			{% if post.date %}
 				{% assign date_segments = post.date | split: "-" %}
 				{% if date_segments.size >= 3 %}
