--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,57 +38,28 @@
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 
+		<!-- 统一处理所有日期格式 -->
+		{% assign date = post.date | default: "N/A" %}
+
 		{% if post.collection == 'teaching' %}
-		<!-- Teaching collection日期处理 -->
-			<p>{{ post.type }}, <i>{{ post.venue }}</i>, 
-			{% if post.date %}
-				{% assign date_segments = post.date | split: "-" %}
-				{% if date_segments.size >= 3 %}
-					{{ post.date | date: "%B %d, %Y" }}
-				{% elsif date_segments.size == 2 %}
-					{{ post.date | date: "%B, %Y" }}
-				{% else %}
-					{{ post.date | date: "%Y" }}
-				{% endif %}
-			{% else %}
-				{{ "N/A" }}
-			{% endif %}</p>
+		<p class="page__meta">
+			{{ post.type }}, <i>{{ post.venue }}</i>, 
+			{% include date-format.html date=date %}
+		</p>
 
 		{% elsif post.collection == 'publications' %}
-		<!-- Publications collection日期处理 -->
-			<p>Published in <i>{{ post.venue }}</i>, 
-			{% if post.date %}
-				{% assign date_segments = post.date | split: "-" %}
-				{% if date_segments.size >= 3 %}
-					{{ post.date | date: "%B %d, %Y" }}
-				{% elsif date_segments.size == 2 %}
-					{{ post.date | date: "%B, %Y" }}
-				{% else %}
-					{{ post.date | date: "%Y" }}
-				{% endif %}
-			{% else %}
-				{{ "N/A" }}
-			{% endif %}</p>
+		<p class="page__meta">
+			Published in <i>{{ post.venue }}</i>, 
+			{% include date-format.html date=date %}
+		</p>
 
 		{% else %}
-			<!-- 其他内容的日期处理 -->
-			<p class="page__date">
-			<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-			<time datetime="{{ post.date | date: '%Y-%m-%d' }}">
-			{% if post.date %}
-				{% assign date_segments = post.date | split: "-" %}
-				{% if date_segments.size >= 3 %}
-					{{ post.date | date: "%B %d, %Y" }}
-				{% elsif date_segments.size == 2 %}
-					{{ post.date | date: "%B, %Y" }}
-				{% else %}
-					{{ post.date | date: "%Y" }}
-				{% endif %}
-			{% else %}
-				{{ "N/A" }}
-			{% endif %}
+		<p class="page__date">
+			<strong><i class="fa fa-fw fa-calendar"></i> {{ site.data.ui-text[site.locale].date_label }}</strong>
+			<time datetime="{{ date | date_to_xmlschema }}">
+			{% include date-format.html date=date %}
 			</time>
-			</p>
+		</p>
 		{% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
