--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,6 +12,15 @@
   {% assign title = post.title %}
 {% endif %}
 
+{% assign date_parts = post.date | split: '-' %}
+{% if date_parts.size == 3 %}
+  {% assign date_format = "%B %d, %Y" %}
+{% elsif date_parts.size == 2 %}
+  {% assign date_format = "%B, %Y" %}
+{% else %}
+  {% assign date_format = "%Y" %}
+{% endif %}
+
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -34,32 +43,16 @@
       {% endif %}
     </h2>
     
-    {% if post.read_time %}
-      <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
-    {% endif %}
-
-		<!-- 统一处理所有日期格式 -->
-		{% assign date = post.date | default: "N/A" %}
+	{% if post.read_time %}
+	  <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+	{% endif %}
 
 		{% if post.collection == 'teaching' %}
-		<p class="page__meta">
-			{{ post.type }}, <i>{{ post.venue }}</i>, 
-			{% include date-format.html date=date %}
-		</p>
-
+		  <p>{{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: date_format }}</p>
 		{% elsif post.collection == 'publications' %}
-		<p class="page__meta">
-			Published in <i>{{ post.venue }}</i>, 
-			{% include date-format.html date=date %}
-		</p>
-
-		{% else %}
-		<p class="page__date">
-			<strong><i class="fa fa-fw fa-calendar"></i> {{ site.data.ui-text[site.locale].date_label }}</strong>
-			<time datetime="{{ date | date_to_xmlschema }}">
-			{% include date-format.html date=date %}
-			</time>
-		</p>
+		  <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: date_format }}</p>
+		{% elsif post.date %}
+		  <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: date_format }}</time></p>
 		{% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
