--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -34,58 +34,48 @@
       {% endif %}
     </h2>
     
-	{% if post.read_time %}
-  <p class="page__meta">
-    <i class="fa fa-clock" aria-hidden="true"></i> 
-    {% include read-time.html %}
-  </p>
-{% endif %}
-
-{% assign date_parts = post.date | split: '-' %}
-{% assign date_format = "%Y" %}
-{% if post.date %}
-  {% if date_parts.size == 3 %}
-    {% assign date_format = "%B %d, %Y" %}
-  {% elsif date_parts.size == 2 %}
-    {% assign date_format = "%B, %Y" %}
-  {% endif %}
-{% endif %}
-
-{% case post.collection %}
-{% when 'teaching' %}
-  <p>
-    {{ post.type | default: "N/A" }}, 
-    <i>{{ post.venue | default: "N/A" }}</i>, 
-    {% if post.date %}
-      {{ post.date | date: date_format }}
-    {% else %}
-      N/A
+    {% if post.read_time %}
+      <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
-  </p>
-{% when 'publications' %}
-  <p>
-    Published in <i>{{ post.venue | default: "N/A" }}</i>, 
-    {% if post.date %}
-      {{ post.date | date: date_format }}
-    {% else %}
-      N/A
-    {% endif %}
-  </p>
-{% else %}
-  {% if post.date %}
-    <p class="page__date">
-      <strong>
-        <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
-        {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}
-      </strong>
-      <time datetime="{{ post.date | date_to_xmlschema }}">
-        {{ post.date | date: date_format }}
-      </time>
-    </p>
-  {% else %}
-    <p class="page__date">Date not available.</p>
-  {% endif %}
-{% endcase %}
+
+		{% if post.collection == 'teaching' %}
+		  <p>{{ post.type }}, <i>{{ post.venue }}</i>, 
+		  <!-- Teaching collection日期处理 -->
+		  {% if post.date %}
+			{{ post.date | date: "%B %d, %Y" }}
+		  {% elsif post.year_month %}
+			{{ post.year_month | append: "-01" | date: "%B, %Y" }}
+		  {% elsif post.year %}
+			{{ post.year }}
+		  {% else %}
+			{{ "N/A" }}
+		  {% endif %}</p>
+		{% elsif post.collection == 'publications' %}
+		  <p>Published in <i>{{ post.venue }}</i>, 
+		  <!-- Publications collection日期处理 -->
+		  {% if post.date %}
+			{{ post.date | date: "B %d, %Y" }}
+		  {% elsif post.year_month %}
+			{{ post.year_month | append: "-01" | date: "%B, %Y" }}
+		  {% elsif post.year %}
+			{{ post.year }}
+		  {% else %}
+			{{ "N/A" }}
+		  {% endif %}</p>
+		{% else %}
+		  <!-- 其他内容的日期处理 -->
+		  {% if post.date %}
+		  <p class="page__date">
+			<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
+			{% if post.date %}
+			  <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time>
+			{% elsif post.year_month %}
+			  <time datetime="{{ post.year_month }}-01">{{ post.year_month | append: "-01" | date: "%B, %Y" }}</time>
+			{% elsif post.year %}
+			  <time datetime="{{ post.year }}-01-01">{{ post.year }}</time>
+			{% endif %}
+		  </p>
+		{% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
     <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
