--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,55 +38,13 @@
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 
-		{% if post.collection == 'teaching' %}
-		  <p>{{ post.type }}, <i>{{ post.venue }}</i>, 
-		  <!-- Teaching collection日期处理 -->
-		  {% if post.date %}
-		    {% assign date_segments = post.date | split: "-" %}
-			{% if date_segments.size >= 3 %}
-			  {{ post.date | date: "%B %d, %Y" }}
-			{% elsif date_segments.size == 2 %}
-			  {{ post.date | append: "-01" | date: "%B, %Y" }}
-			{% else %}
-			  {{ post.date }}
-			{% endif %}
-		  {% else %}
-			{{ "N/A" }}
-		  {% endif %}</p>
-		{% elsif post.collection == 'publications' %}
-		  <p>Published in <i>{{ post.venue }}</i>, 
-		  <!-- Publications collection日期处理 -->
-		  {% if post.date %}
-			{% assign date_segments = post.date | split: "-" %}
-			{% if date_segments.size >= 3 %}
-			  {{ post.date | date: "%B %d, %Y" }}
-			{% elsif date_segments.size == 2 %}
-			  {{ post.date | append: "-01" | date: "%B, %Y" }}
-			{% else %}
-			  {{ post.date }}
-			{% endif %}
-		  {% else %}
-			{{ "N/A" }}
-		  {% endif %}</p>
-		{% elseif post.date%}
-		  <!-- 其他内容的日期处理 -->
-		  {% assign date_segments = post.date | split: "-" %}
-		  {% if date_segments.size >= 3 %}
-			<p class="page__date">
-			<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-			<time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time></p>
-		  {% elsif date_segments.size == 2 %}
-			 <p class="page__date">
-			 <strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-			 <time datetime="{{ post.date }}-01">{{ post.date | append: "-01" | date: "%B, %Y" }}</time>
-			 </p>
-		  {% else %}
-			<p class="page__date">
-			<strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong>
-			<time datetime="{{ post.date }}-01-01">{{ post.date }}</time>
-			</p>
-		  {% endif %}
-		{% endif %}
+        {% if post.collection == 'teaching' %}
+          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+        {% elsif post.collection == 'publications' %}
+          <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+        {% elsif post.date %}
+         <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
+        {% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
     <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
