--- a/_sass/layout/_buttons.scss
+++ b/_sass/layout/_buttons.scss
@@ -152,3 +152,28 @@
     font-size: $type-size-7;
   }
 }
+
+/* 微博按钮 */
+.btn--weibo {
+  background-color: #e6162d;
+  color: white !important;
+  &:hover {
+    background-color: darken(#e6162d, 10%);
+  }
+}
+
+/* 微信按钮 */
+.btn--wechat {
+  background-color: #07c160;
+  color: white !important;
+  position: relative;
+
+  .wechat-qr {
+    display: none;
+    z-index: 100;
+  }
+
+  &:hover .wechat-qr {
+    display: block;
+  }
+}
