--- a/_includes/post_pagination.html
+++ b/_includes/post_pagination.html
@@ -2,6 +2,8 @@
 
 {% if page.previous or page.next %}
   <nav class="pagination">
+	{% if post.paperurl %}
+      <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
     {% if page.previous %}
       <a href="{{ base_path }}{{ page.previous.url }}" class="pagination--pager" title="{{ page.previous.title | markdownify | strip_html }}">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a>
     {% else %}
